--- a/Python/Flask_Book_Library/Dockerfile
+++ b/Python/Flask_Book_Library/Dockerfile
@@ -18,5 +18,8 @@ ENV FLASK_RUN_HOST=0.0.0.0
 # Expose the port the app runs on
 EXPOSE 5000
 
+# Testy jednostkowe
+RUN python -m unittest discover -v
+
 # Uruchamiamy aplikację
 CMD ["flask", "run"]
